--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lazygyu's Portfolio</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to Vuetify 3</title>
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
-  <template>
-    <v-app>
-      <v-container>
-        <v-row>
-          <v-col>
-            <div>이곳에 콘텐츠를 추가하세요.</div>
-          </v-col>
-        </v-row>
-      </v-container>
-    </v-app>
-  </template>
-  
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+    <template>
+      <v-app>
+        <v-container>
+          <v-row>
+            <v-col>
+              <div>이곳에 콘텐츠를 추가하세요.</div>
+            </v-col>
+          </v-row>
+        </v-container>
+      </v-app>
+    </template>
+  </body>
 </html>
